--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -7,7 +7,7 @@ repos:
         args:
           - '--args=--only=terraform_deprecated_interpolation'
           - '--args=--only=terraform_deprecated_index'
-          - '--args=--only=terraform_unused_declarations' #
+          - '--args=--only=terraform_unused_declarations'
           - '--args=--only=terraform_comment_syntax'
           - '--args=--only=terraform_documented_outputs'
           - '--args=--only=terraform_documented_variables'
@@ -24,8 +24,8 @@ repos:
       - id: check-yaml
 
   - repo: https://github.com/bridgecrewio/checkov.git
-    rev: '2.0.682'
+    rev: '2.0.868'
     hooks:
     - id: checkov
       verbose: true
-      args: ["-d .", "--framework", "terraform", "--skip-check", "CKV_AWS_18,CKV_AWS_52,CKV_AWS_144,CKV2_AWS_6,CKV_AWS_145"]
+      args: ["-d .", "--framework", "terraform", "--skip-check", "CKV_AWS_18,CKV_AWS_19,CKV_AWS_21,CKV_AWS_52,CKV_AWS_144,CKV2_AWS_6,CKV_AWS_145"]
