--- a/.gitignore
+++ b/.gitignore
@@ -79,5 +79,9 @@ _testmain.go
 /test/run.out
 /test/times.out
 
-# ignore test files(s)
-**test*
+# ignore test related file(s)
+**/test**
+**.
+
+# ignore terraform external modules
+**/.external_modules
